--- a/sample-config.toml
+++ b/sample-config.toml
@@ -1,9 +1,9 @@
 # short class ID (human readable)
 class = "CSCI 1234"
 # list email addresses whose API keys get admin access
-admins = ["eleanor_eng@brown.edu"]
+admins = ["koyena_pal@brown.edu"]
 # list email addresses who should receive notification emails
-staff = ["eleanor_eng@brown.edu"]
+staff = ["koyena_pal@brown.edu"]
 # custom template directory
 template_dir = "templates"
 # custom resource directory (e.g., for images, CSS, JS)
